# termui

./: .gitignore  LICENSE  README.md  pyproject.toml  termio_tui.tcss
sshop/: config.py
sshop/screens/: snippets.py
termio_tui/: app.py  config.py  engine.py  modals.py
termio_tui/screens/: add_edit.py  agent.py  backup.py  bootstrap.py  home.py  log.py  sftp.py  snippets.py  templates.py  tunnels.py
termio_tui/widgets/: keybar.py  stats_header.py
