[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termio-tui"
version = "0.1.0"
description = "Textual TUI frontend for termio"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89.0",
    "paramiko>=3.0",
]

[project.scripts]
termui     = "termio_tui.app:main"
termio-tui = "termio_tui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["termio_tui"]
